# casedd

./: .env.example  .gitignore  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  LICENSE.txt  README.md  casedd-ctl  casedd.yaml.example  dev.sh  docker-compose.yml  license-commercial.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/skills/docs-validation/: SKILL.md
.github/workflows/: ci.yml  update-template-snaps-manifest.yml
casedd/: __init__.py  __main__.py  cli.py  config.py  daemon.py  data_store.py  emergency_exit.py  getter_health.py  input_detect.py  logging_setup.py  speedtest_fields.py  usb_display.py
casedd/getters/: __init__.py  apod.py  base.py  containers.py  cpu.py  disk.py  fans.py  gpu.py  htop.py  invokeai.py  jellyfin.py  memory.py  net_ports.py  network.py  nzbget.py  ollama.py  os_updates.py  pihole.py  plex.py  sabnzbd.py  servarr.py  speedtest.py  sports.py  synology.py  sysinfo.py  system.py  truenas.py  tuya.py  ups.py  vms.py  weather.py
casedd/ingestion/: __init__.py  rest.py  unix_socket.py
casedd/notifications/: __init__.py  pushover.py
casedd/outputs/: __init__.py  base.py  framebuffer.py  http_viewer.py  registry.py  websocket.py
casedd/renderer/: __init__.py  color.py  engine.py  fonts.py
casedd/renderer/widgets/: __init__.py  apod.py  bar.py  base.py  boolean.py  clock.py  gauge.py  histogram.py  htop.py  image.py  jellyfin_now_playing.py  net_ports.py  ollama.py  panel.py  plex_now_playing.py  plex_recently_added.py  registry.py  slideshow.py  sparkline.py  sysinfo.py  table.py  text.py  ups.py  value.py  weather_alerts.py  weather_conditions.py  weather_forecast.py  weather_radar.py
casedd/template/: __init__.py  grid.py  loader.py  models.py  registry.py  selector.py
deploy/: casedd.service  fb-unblank.service
deploy/install/: install.sh  uninstall.sh
docs/: .nojekyll  CNAME  Gemfile  INPUTLESS_MONITOR.md  README-URL.txt  README.html  README.md  RESCUE.md  _config.yml  api.md  cli.md  getter_types.json  getters.html  getters.md  index.html  index.md  output-architecture.md  rotation.md  site.webmanifest  speedtest_push.md  template_format.html  template_format.md  tuya_setup.md
docs/_includes/: head_custom.html
docs/_sass/custom/: setup.scss
docs/images/: optimization_manifest.json
docs/images/template_snaps/: .gitignore  manifest.json
loadtest/: api_push.py  cpu.py  gpu.py  ram.py  vram.py
run/: rotation-primary.json
scripts/: capture_template_snaps.py  clean_docs_html.sh  fb_test.py  fb_unblank_daemon.py  gen_docs.sh  optimize_docs_images.py  push_demo.sh  speedtest_push.sh  sync_docs_to_pages.sh  template_sanity.sh
scripts/fixtures/: README.md  invokeai.json  jellyfin_dashboard.json  nzbget_dashboard.json  pihole.json  plex_dashboard.json  sabnzbd_dashboard.json  servarr_dashboard.json  sports_scores.json  synology_dashboard.json  synology_surveillance.json  truenas_dashboard.json  truenas_jails.json  truenas_vms.json
templates/: apod.casedd  docker_dashboard.casedd  fans.casedd  htop.casedd  invokeai.casedd  jellyfin_dashboard.casedd  kvm_vms.casedd  net_ports.casedd  nvidia_detail.casedd  nzbget_current.casedd  nzbget_dashboard.casedd  nzbget_queue.casedd  ollama_host.casedd  os_updates.casedd  pihole.casedd  plex_dashboard.casedd  push_demo.casedd  sabnzbd_dashboard.casedd  servarr_dashboard.casedd  slideshow.casedd  speedtest.casedd  sports_scores.casedd  sports_today.casedd  stats_over_slideshow.casedd  synology_dashboard.casedd  synology_surveillance.casedd  sysinfo.casedd  system_stats.casedd  truenas_dashboard.casedd  truenas_jails.casedd  truenas_vms.casedd  tuya_power.casedd  tuya_sensors.casedd  ups_status.casedd  weather_external.casedd  weather_nws.casedd
tests/: conftest.py  test_capture_template_snaps.py  test_cli.py  test_config.py  test_daemon_getter_planning.py  test_daemon_refresh_rates.py  test_daemon_speedtest_cache.py  test_data_store.py  test_emergency_exit.py  test_emergency_exit_process.py  test_framebuffer_output.py  test_getter_health.py  test_getter_intervals.py  test_getters_apod.py  test_getters_base.py  test_getters_containers.py  test_getters_disk.py  test_getters_gpu.py  test_getters_invokeai.py  test_getters_jellyfin.py  test_getters_nzbget.py  test_getters_ollama.py  test_getters_os_updates.py  test_getters_pihole.py  test_getters_plex.py  test_getters_sabnzbd.py  test_getters_servarr.py  test_getters_speedtest.py  test_getters_sports.py  test_getters_synology.py  test_getters_truenas.py  test_getters_tuya.py  test_getters_vms.py  test_http_auth_ratelimit.py  test_http_diagnostics.py  test_http_health_metrics.py  test_input_detect.py  test_live_http_auth_ratelimit.py  test_multi_panel_inheritance.py  test_output_registry.py  (+12 more)
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  main.jsx  styles.css
